# minio-format-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: erasure.rs  format.rs  lib.rs  shard.rs  types.rs  xlmeta.rs
testdata/: .gitattributes  README.md
